Refactor and create tests for KeyStoreCrypto class (#11335)